<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvTituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/label_login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTituloLogin"
        android:text="@string/label_usuario" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvUsuario"
        android:layout_toRightOf="@+id/tvUsuario"
        android:nextFocusForward="@+id/etSenha"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsuario"
        android:text="@string/label_senha" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etUsuario"
        android:layout_alignTop="@+id/tvSenha"
        android:layout_toRightOf="@+id/tvSenha"
        android:inputType="textPassword"
        android:nextFocusForward="@+id/btLogar"
        android:imeOptions="actionDone" />

    <Button
        android:id="@+id/btLogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSenha"
        android:layout_centerInParent="true"
        android:text="@string/botao_logar" />

    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/botao_cadastrar" />
</RelativeLayout>
