<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.leandroap.demolayout.CadastroActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cadastro_time"
            android:textSize="18dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvClube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_clube" />

        <EditText
            android:id="@+id/etClube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:layout_alignTop="@+id/tvClube"
            android:layout_toRightOf="@+id/tvClube" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_cadastrar"
            android:textSize="18dp" />
    </TableRow>

</TableLayout>
